--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -2,6 +2,13 @@ img{
     vertical-align: middle;
     border: 0;
 }
+
+.nav-option{
+    color: #40474f; 
+    font-size: 16px;
+    text-align: start;
+    margin-bottom: 3px
+}
 .capsula{
     width:100%;
     height:100%;
@@ -149,9 +156,9 @@ article#placas{
 }
 .input-group > .form-control, .btn{
     border-radius: 0px;
-    border-color: red !important;
-    background-color: red !important;
-    color:white;
+    /*border-color: red !important;*/
+    /*background-color: red !important;*/
+    color: black;
 }
 #msjerror{
     font-size: 12px;
