--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,5 +5,17 @@
 // Variables
 @import 'variables';
 
+// Import normalize.css
+@import '~normalize.css/normalize.css';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Layaout-master
+@import 'layout-master';
+
+// Global-Icons
+@import 'global-icons';
+
+// dashboard
+@import 'dashboard';
